@@ -40,6 +40,9 @@ Trunk (unreleased changes)
     HADOOP-3176.  Change lease record when a open-for-write-file 
     gets renamed. (dhruba)
 
+    HADOOP-2703.  The default options to fsck skips checking files
+    that are being written to. (lohit vijayarenu via dhruba) 
+
 Release 0.17.0 - Unreleased
 
   INCOMPATIBLE CHANGES
